native/src/tarantool_box.h

    struct tarantool_box
    {
          void (*tarantool_evaluate_address)(struct interactor_message*);
          void (*tarantool_call_address)(struct interactor_message*);
          void (*tarantool_iterator_next_single_address)(struct interactor_message*);
          void (*tarantool_iterator_next_many_address)(struct interactor_message*);
          void (*tarantool_iterator_destroy_address)(struct interactor_message*);
          void (*tarantool_free_output_buffer_address)(struct interactor_message*);
          void (*tarantool_space_id_by_name_address)(struct interactor_message*);
          void (*tarantool_space_count_address)(struct interactor_message*);
          void (*tarantool_space_length_address)(struct interactor_message*);
          void (*tarantool_space_iterator_address)(struct interactor_message*);
          void (*tarantool_space_insert_single_address)(struct interactor_message*);
          void (*tarantool_space_insert_many_address)(struct interactor_message*);
          void (*tarantool_space_put_single_address)(struct interactor_message*);
          void (*tarantool_space_put_many_address)(struct interactor_message*);
          void (*tarantool_space_delete_single_address)(struct interactor_message*);
          void (*tarantool_space_delete_many_address)(struct interactor_message*);
          void (*tarantool_space_update_single_address)(struct interactor_message*);
          void (*tarantool_space_update_many_address)(struct interactor_message*);
          void (*tarantool_space_get_address)(struct interactor_message*);
          void (*tarantool_space_min_address)(struct interactor_message*);
          void (*tarantool_space_max_address)(struct interactor_message*);
          void (*tarantool_space_truncate_address)(struct interactor_message*);
          void (*tarantool_space_upsert_address)(struct interactor_message*);
          void (*tarantool_index_count_address)(struct interactor_message*);
          void (*tarantool_index_length_address)(struct interactor_message*);
          void (*tarantool_index_iterator_address)(struct interactor_message*);
          void (*tarantool_index_get_address)(struct interactor_message*);
          void (*tarantool_index_max_address)(struct interactor_message*);
          void (*tarantool_index_min_address)(struct interactor_message*);
          void (*tarantool_index_update_single_address)(struct interactor_message*);
          void (*tarantool_index_update_many_address)(struct interactor_message*);
          void (*tarantool_index_select_address)(struct interactor_message*);
          void (*tarantool_index_id_by_name_address)(struct interactor_message*);
    };
    void tarantool_initialize_box(struct tarantool_box* box);
    void tarantool_destroy_box(struct tarantool_box* box);
    void tarantool_evaluate(struct interactor_message* message);
    void tarantool_call(struct interactor_message* message);
    void tarantool_space_iterator(struct interactor_message* message);
    void tarantool_space_count(struct interactor_message* message);
    void tarantool_space_length(struct interactor_message* message);
    void tarantool_space_truncate(struct interactor_message* message);
    void tarantool_space_put_single(struct interactor_message* message);
    void tarantool_space_insert_single(struct interactor_message* message);
    void tarantool_space_update_single(struct interactor_message* message);
    void tarantool_space_delete_single(struct interactor_message* message);
    void tarantool_space_put_many(struct interactor_message* message);
    void tarantool_space_insert_many(struct interactor_message* message);
    void tarantool_space_update_many(struct interactor_message* message);
    void tarantool_space_delete_many(struct interactor_message* message);
    void tarantool_space_upsert(struct interactor_message* message);
    void tarantool_space_get(struct interactor_message* message);
    void tarantool_space_min(struct interactor_message* message);
    void tarantool_space_max(struct interactor_message* message);
    void tarantool_space_select(struct interactor_message* message);
    void tarantool_space_id_by_name(struct interactor_message* message);
    void tarantool_index_iterator(struct interactor_message* message);
    void tarantool_index_count(struct interactor_message* message);
    void tarantool_index_length(struct interactor_message* message);
    void tarantool_index_id_by_name(struct interactor_message* message);
    void tarantool_index_get(struct interactor_message* message);
    void tarantool_index_min(struct interactor_message* message);
    void tarantool_index_max(struct interactor_message* message);
    void tarantool_index_select(struct interactor_message* message);
    void tarantool_index_update_single(struct interactor_message* message);
    void tarantool_index_update_many(struct interactor_message* message);
    void tarantool_iterator_next_single(struct interactor_message* message);
    void tarantool_iterator_next_many(struct interactor_message* message);
    void tarantool_iterator_destroy(struct interactor_message* message);
    void tarantool_free_output_buffer(struct interactor_message* message);
    void tarantool_free_output_port(struct interactor_message* message);