dart/lib/storage/bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_field
import 'dart:ffi' as ffi;
import 'package:linux_interactor/interactor/bindings.dart'
    as linux_interactor_bindings;

@ffi.Native<ffi.Void Function(ffi.Pointer<tarantool_box>)>(
    symbol: 'tarantool_initialize_box',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_initialize_box(
  ffi.Pointer<tarantool_box> box,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<tarantool_box>)>(
    symbol: 'tarantool_destroy_box',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_destroy_box(
  ffi.Pointer<tarantool_box> box,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_evaluate', assetId: 'tarantool-bindings', isLeaf: true)
external void tarantool_evaluate(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_call', assetId: 'tarantool-bindings', isLeaf: true)
external void tarantool_call(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_iterator',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_iterator(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_count',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_count(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_length',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_length(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_truncate',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_truncate(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_put_single',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_put_single(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_insert_single',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_insert_single(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_update_single',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_update_single(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_delete_single',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_delete_single(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_put_many',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_put_many(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_insert_many',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_insert_many(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_update_many',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_update_many(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_delete_many',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_delete_many(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_upsert',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_upsert(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_get', assetId: 'tarantool-bindings', isLeaf: true)
external void tarantool_space_get(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_min', assetId: 'tarantool-bindings', isLeaf: true)
external void tarantool_space_min(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_max', assetId: 'tarantool-bindings', isLeaf: true)
external void tarantool_space_max(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_select',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_select(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_id_by_name',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_id_by_name(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_iterator',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_index_iterator(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_count',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_index_count(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_length',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_index_length(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_id_by_name',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_index_id_by_name(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_get', assetId: 'tarantool-bindings', isLeaf: true)
external void tarantool_index_get(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_min', assetId: 'tarantool-bindings', isLeaf: true)
external void tarantool_index_min(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_max', assetId: 'tarantool-bindings', isLeaf: true)
external void tarantool_index_max(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_select',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_index_select(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_update_single',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_index_update_single(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_update_many',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_index_update_many(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_iterator_next_single',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_iterator_next_single(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_iterator_next_many',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_iterator_next_many(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_iterator_destroy',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_iterator_destroy(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_free_output_buffer',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_free_output_buffer(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_free_output_port',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_free_output_port(
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);
